[package]
name = "fallible-streaming-iterator"
version = "0.1.3"
authors = ["Steven Fackler <sfackler@gmail.com>"]
description = "Fallible streaming iteration"
license = "MIT/Apache-2.0"
repository = "https://github.com/sfackler/fallible-streaming-iterator"
documentation = "https://docs.rs/fallible-streaming-iterator/0.1.3/fallible_streaming_iterator"
readme = "README.md"

[features]
std = []

[dependencies]
